--- a/index.html
+++ b/index.html
@@ -1,34 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Zelda JS ♠</title>
-    <link rel="icon" href="res/favico.png" />
-    <link rel="stylesheet" href="style/style.css" />
-  </head>
-  <body>
-    <div class="game_header">
-      <h1>Zelda Game in Js</h1>
-      <h2>🌙</h2>
-    </div>
-    <div class="game_canvas"></div>
-    <script src="js/theme.js"></script>
-    <script src="vendor/kaboom.js"></script>
-    <script src="js/game.js"></script>
-    <script src="js/engine.js"></script>
-  </body>
-</html>
-<!-- <!DOCTYPE html>
-<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+    <meta charset="UTF-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>Zelda JS ♠</title>
+    <link rel="icon" href="res/favico.png"/>
+    <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
-  🐛😢
+<div class="game_header">
+    <h1>Zelda Game in Js</h1>
+    <h2 id="toggle_theme">🌙</h2>
+</div>
+<div class="game_body">
+
+    <div class="game_details">
+        <span>Kill the Skeletor</span>
+        <img src="res/sprites/Ei1VnX8.png" alt="Skeletor"/>
+        <span>And Earn Coins 💲💵💶</span>
+    </div>
+    <div class="game_canvas">
+        <iframe src="canvas.html" frameborder="0" class="iframe">
+            <h1>Sorry 😢 Please upgrade your browser 🌍 to play the Game 🎮</h1>
+        </iframe>
+    </div>
+</div>
+<script src="theme.js"></script>
 </body>
-</html> -->
+</html>
