--- a/index.html
+++ b/index.html
@@ -10,15 +10,27 @@
 </head>
 <body>
 <div class="game_header">
-    <h1>Zelda Game in Js</h1>
+    <h1>Zelda Game Js</h1>
     <h2 id="toggle_theme">🌙</h2>
 </div>
 <div class="game_body">
 
     <div class="game_details">
-        <span>Kill the Skeletor</span>
-        <img src="res/sprites/Ei1VnX8.png" alt="Skeletor"/>
-        <span>And Earn Coins 💲💵💶</span>
+        <div class="hint1">
+            <span>Kill the Skeletor</span>
+            <img src="res/sprites/Ei1VnX8.png" alt="Skeletor" class="sprite"/>
+            <span>And Earn Coins 💲💵💶</span>
+        </div>
+        <div class="hint2">
+            <span>Avoid Slicers</span>
+            <img src="res/sprites/c6JFi5Z.png" alt="Skeletor" class="sprite"/>
+            <span>to Live 💗</span>
+        </div>
+        <div class="hint3">
+            <span>Look for </span>
+            <img src="res/sprites/U9nre4n.png" alt="Skeletor" class="sprite"/>
+            <span>And find easter 🐰 🥚</span>
+        </div>
     </div>
     <div class="game_canvas">
         <iframe src="canvas.html" frameborder="0" class="iframe">
